Added a button to take a picture. (experimental)

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <div id="overlay-container" class="center">
       <!--<img id="overlay-img" />-->
     </div>
+    <button type="button" onclick="takePhoto()">Take a Photo</button>
   </div>
 
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
